# webgpu-tutorial-rs

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  Trunk.toml  index.html  run.txt
src/: audio.rs  boilerplate.rs  constants.rs  diagonal.rs  iced_debug.rs  lib.rs  main.rs  shader.wgsl
