[package]
name = "wgpu-hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apodize = "1.0.0"
atomic_refcell = "0.1.11"
bytemuck = "1.13.1"
cpal = "0.15.2"
crossbeam-channel = "0.5.8"
divrem = "1.0.0"
env_logger = "0.10.0"
log = "0.4.17"
pollster = "0.3.0"
realfft = "3.3.0"
web-time = "0.2.0"
wgpu = "0.16.2"
winit = "0.29.0-beta.0"

[features]
audio_log = []

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.61", features = ["Document", "Text"] }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen-futures = "0.4.34"
wasm-bindgen = "0.2.84"
rand = { version = "0.8.5", features = ["alloc", "getrandom", "libc", "std", "std_rng"], default-features = false }
getrandom = { version = "0.2.9", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.8.5"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic

# To build for Twiggy space profiler, comment this out and add [build]release=false to Trunk.toml
strip = true        # Strip symbols from binary
